--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 
   <body>
     <div>fortniteBattlepass</div>
+    <div class="ascii-art">
+      ⣀⣤ ⠀⠀⠀⠀⣿⠿⣶ ⠀⠀⠀⠀⣿⣿⣀ ⠀⠀⠀⣶⣶⣿⠿⠛⣶ ⠤⣀⠛⣿⣿⣿⣿⣿⣿⣭⣿⣤ ⠒⠀⠀⠀⠉⣿⣿⣿⣿⠀⠀⠉⣀ ⠀⠤⣤⣤⣀⣿⣿⣿⣿⣀⠀⠀⣿
+      ⠀⠀⠛⣿⣿⣿⣿⣿⣿⣿⣭⣶⠉ ⠀⠀⠀⠤⣿⣿⣿⣿⣿⣿⣿ ⠀⠀⠀⣭⣿⣿⣿⠀⣿⣿⣿ ⠀⠀⠀⣉⣿⣿⠿⠀⠿⣿⣿ ⠀⠀⠀⠀⣿⣿⠀⠀⠀⣿⣿⣤
+      ⠀⠀⠀⣀⣿⣿⠀⠀⠀⣿⣿⣿ ⠀⠀⠀⣿⣿⣿⠀⠀⠀⣿⣿⣿ ⠀⠀⠀⣿⣿⠛⠀⠀⠀⠉⣿⣿ ⠀⠀⠀⠉⣿⠀⠀⠀⠀⠀⠛⣿ ⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⣿⣿
+      ⠀⠀⠀⠀⣛⠀⠀⠀⠀⠀⠀⠛⠿⠿⠿ ⠀⠀⠀⠛⠛ ⠀⠀⠀⣀⣶⣀ ⠀⠀⠀⠒⣛⣭ ⠀⠀⠀⣀⠿⣿⣶ ⠀⣤⣿⠤⣭⣿⣿ ⣤⣿⣿⣿⠛⣿⣿⠀⣀ ⠀⣀⠤⣿⣿⣶⣤⣒⣛
+      ⠉⠀⣀⣿⣿⣿⣿⣭⠉ ⠀⠀⣭⣿⣿⠿⠿⣿ ⠀⣶⣿⣿⠛⠀⣿⣿ ⣤⣿⣿⠉⠤⣿⣿⠿ ⣿⣿⠛⠀⠿⣿⣿ ⣿⣿⣤⠀⣿⣿⠿ ⠀⣿⣿⣶⠀⣿⣿⣶ ⠀⠀⠛⣿⠀⠿⣿⣿
+      ⠀⠀⠀⣉⣿⠀⣿⣿ ⠀⠶⣶⠿⠛⠀⠉⣿ ⠀⠀⠀⠀⠀⠀⣀⣿ ⠀⠀⠀⠀⠀⣶⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⠀⣤⣿⣿⠶⠀⠀⣀⣀ ⠀⠀⠀⠀⠀⠀⣀⣀⣤⣤⣶⣿⣿⣿⣿⣿⣿
+      ⠀⠀⣀⣶⣤⣤⠿⠶⠿⠿⠿⣿⣿⣿⣉⣿⣿ ⠿⣉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⣤⣿⣿⣿⣀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣿⣶⣤
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣿⣿⣿⣿⠿⣛⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⠛⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣶⣿⣿⠿⠀⣿⣿⣿⠛
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⠀⠀⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠿⠿⣿⠀⠀⣿⣶ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠛⠀⠀⣿⣿⣶
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⠤ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣶⣿ ⠀⣀ ⠀⠿⣿⣿⣀ ⠀⠉⣿⣿⣀ ⠀⠀⠛⣿⣭⣀⣀⣤
+      ⠀⠀⣿⣿⣿⣿⣿⠛⠿⣶⣀ ⠀⣿⣿⣿⣿⣿⣿⠀⠀⠀⣉⣶ ⠀⠀⠉⣿⣿⣿⣿⣀⠀⠀⣿⠉ ⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿ ⠀⣀⣿⣿⣿⣿⣿⣿⣿⣿⠿ ⠀⣿⣿⣿⠿⠉⣿⣿⣿⣿
+      ⠀⣿⣿⠿⠀⠀⣿⣿⣿⣿ ⣶⣿⣿⠀⠀⠀⠀⣿⣿⣿ ⠛⣿⣿⣀⠀⠀⠀⣿⣿⣿⣿⣶⣀ ⠀⣿⣿⠉⠀⠀⠀⠉⠉⠉⠛⠛⠿⣿⣶ ⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣿
+      ⠀⠀⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠉⠉ ⣀⣶⣿⠛ ⠀⠀⠀⠀⠀⠀⠀⣀⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⣿⣿⣿⣤⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣤⣿
+      ⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣶⣿⣿⣿⣶⣶⣤⣶⣶⠶⠛⠉⠉ ⠀⠀⠀⠀⠀⠀⣤⣿⠿⣿⣿⣿⣿⣿⠀⠀⠉⠀⠀⠀⠀ ⠛⣿⣤⣤⣀⣤⠿⠉⠀⠉⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠉⠉⠉⠉⠉⠀⠀⠀⠀⠉⣿⣿⣿⣀⠀⠀⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣶⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⠛⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣛⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀
+      ⠀⠀⠀⠀⠀⠀⠀⣶⣿⣿⠛⠿⣿⣿⣿⣶⣤⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⠀⣿⠛⠉⠀⠀⠀⠛⠿⣿⣿⣶⣀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⣿⣀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠛⠿⣶⣤⠀⠀
+      ⠀⠀⠀⠀⠀⠛⠿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣿⣿⠿⠀ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀ ⠀⠀⠀⠀⠀⠀⣤⣶⣶
+      ⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣀⣀ ⠀⠀⠀⠀⠀⣀⣶⣿⣿⣿⣿⣿⣿ ⣤⣶⣀⠿⠶⣿⣿⣿⠿⣿⣿⣿⣿ ⠉⠿⣿⣿⠿⠛⠉⠀⣿⣿⣿⣿⣿ ⠀⠀⠉⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣤⣤
+      ⠀⠀⠀⠀⠀⠀⠀⣤⣶⣿⣿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⣀⣿⣿⣿⣿⣿⠿⣿⣿⣿⣿ ⠀⠀⠀⠀⣀⣿⣿⣿⠿⠉⠀⠀⣿⣿⣿⣿ ⠀⠀⠀⠀⣿⣿⠿⠉⠀⠀⠀⠀⠿⣿⣿⠛
+      ⠀⠀⠀⠀⠛⣿⣿⣀⠀⠀⠀⠀⠀⣿⣿⣀ ⠀⠀⠀⠀⠀⣿⣿⣿⠀⠀⠀⠀⠀⠿⣿⣿ ⠀⠀⠀⠀⠀⠉⣿⣿⠀⠀⠀⠀⠀⠀⠉⣿ ⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⣀⣿
+      ⠀⠀⠀⠀⠀⠀⣀⣿⣿ ⠀⠀⠀⠀⠤⣿⠿⠿⠿ ⠀⠀⠀⠀⣀ ⠀⠀⣶⣿⠿⠀⠀⠀⣀⠀⣤⣤ ⠀⣶⣿⠀⠀⠀⠀⣿⣿⣿⠛⠛⠿⣤⣀ ⣶⣿⣤⣤⣤⣤⣤⣿⣿⣿⣀⣤⣶⣭⣿⣶⣀
+      ⠉⠉⠉⠛⠛⠿⣿⣿⣿⣿⣿⣿⣿⠛⠛⠿⠿ ⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⠿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⣭⣿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⣤⣿⣿⣿⣿⣿⣿
+      ⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣿
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⣿⠛⠿⣿⣤ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣿⠀⠀⠀⣿⣿⣤ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⠀⣶⣿⠛⠉ ⠀⠀⠀⠀⠀⠀⠀⠀⣤⣿⣿⠀⠀⠉
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉ ⠀⠀⠀⠀⠀⠀⣶⣿⣶ ⠀⠀⠀⣤⣤⣤⣿⣿⣿ ⠀⠀⣶⣿⣿⣿⣿⣿⣿⣿⣶ ⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⣿ ⠀⠀⣿⣉⣿⣿⣿⣿⣉⠉⣿⣶
+      ⠀⠀⣿⣿⣿⣿⣿⣿⣿⣿⠿⣿ ⠀⣤⣿⣿⣿⣿⣿⣿⣿⠿⠀⣿⣶ ⣤⣿⠿⣿⣿⣿⣿⣿⠿⠀⠀⣿⣿⣤ ⠉⠉⠀⣿⣿⣿⣿⣿⠀⠀⠒⠛⠿⠿⠿ ⠀⠀⠀⠉⣿⣿⣿⠀⠀⠀⠀⠀⠀⠉
+      ⠀⠀⠀⣿⣿⣿⣿⣿⣶ ⠀⠀⠀⠀⣿⠉⠿⣿⣿ ⠀⠀⠀⠀⣿⣤⠀⠛⣿⣿ ⠀⠀⠀⠀⣶⣿⠀⠀⠀⣿⣶ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣭⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⣤⣿⣿⠉
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣶ ⠀⠀⠀⠀⠀⣀⣀⠀⣶⣿⣿⠶ ⣶⣿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣤⣤ ⠀⠉⠶⣶⣀⣿⣿⣿⣿⣿⣿⣿⠿⣿⣤⣀ ⠀⠀⠀⣿⣿⠿⠉⣿⣿⣿⣿⣭⠀⠶⠿⠿
+      ⠀⠀⠛⠛⠿⠀⠀⣿⣿⣿⣉⠿⣿⠶ ⠀⠀⠀⠀⠀⣤⣶⣿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿⣿⣿⠒ ⠀⠀⠀⠀⣀⣿⣿⣿⣿⣿⣿⣿ ⠀⠀⠀⠀⠀⣿⣿⣿⠛⣭⣭⠉
+      ⠀⠀⠀⠀⠀⣿⣿⣭⣤⣿⠛ ⠀⠀⠀⠀⠀⠛⠿⣿⣿⣿⣭ ⠀⠀⠀⠀⠀⠀⠀⣿⣿⠉⠛⠿⣶⣤ ⠀⠀⠀⠀⠀⠀⣀⣿⠀⠀⣶⣶⠿⠿⠿ ⠀⠀⠀⠀⠀⠀⣿⠛ ⠀⠀⠀⠀⠀⠀⣭⣶
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣤⣤ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿ ⠀⠀⣶⠀⠀⣀⣤⣶⣤⣉⣿⣿⣤⣀ ⠤⣤⣿⣤⣿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣀
+      ⠀⠛⠿⠀⠀⠀⠀⠉⣿⣿⣿⣿⣿⠉⠛⠿⣿⣤ ⠀⠀⠀⠀⠀⠀⠀⠀⠿⣿⣿⣿⠛⠀⠀⠀⣶⠿ ⠀⠀⠀⠀⠀⠀⠀⠀⣀⣿⣿⣿⣿⣤⠀⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⣶⣿⣿⣿⣿⣿⣿⣿⣿
+      ⠀⠀⠀⠀⠀⠀⠀⠿⣿⣿⣿⣿⣿⠿⠉⠉ ⠀⠀⠀⠀⠀⠀⠀⠉⣿⣿⣿⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⠉ ⠀⠀⠀⠀⠀⠀⠀⠀⣛⣿⣭⣶⣀ ⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣿
+      ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⠉⠛⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⠀⠀⣿⣿ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣉⠀⣶⠿ ⠀⠀⠀⠀⠀⠀⠀⠀⣶⣿⠿ ⠀⠀⠀⠀⠀⠀⠀⠛⠿⠛
+      ⠀⠀⠀⣶⣿⣶ ⠀⠀⠀⣿⣿⣿⣀ ⠀⣀⣿⣿⣿⣿⣿⣿ ⣶⣿⠛⣭⣿⣿⣿⣿ ⠛⠛⠛⣿⣿⣿⣿⠿ ⠀⠀⠀⠀⣿⣿⣿ ⠀⠀⣀⣭⣿⣿⣿⣿⣀ ⠀⠤⣿⣿⣿⣿⣿⣿⠉
+      ⠀⣿⣿⣿⣿⣿⣿⠉ ⣿⣿⣿⣿⣿⣿ ⣿⣿⣶⣿⣿ ⠉⠛⣿⣿⣶⣤ ⠀⠀⠉⠿⣿⣿⣤ ⠀⠀⣀⣤⣿⣿⣿ ⠀⠒⠿⠛⠉⠿⣿ ⠀⠀⠀⠀⠀⣀⣿⣿ ⠀⠀⠀⠀⣶⠿⠿⠛
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
